--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
+# .github/workflows/ci.yml
 # SPDX-License-Identifier: MIT
-# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core Contributors
 
 name: CI
 
@@ -7,6 +8,7 @@ on:
   push:
     branches: [main]
   pull_request:
+    branches: [main]
 
 permissions:
   contents: read
@@ -14,15 +16,18 @@ permissions:
 
 jobs:
   build-test:
-    name: Lint & Test (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
+    name: Lint & Test (${{ matrix.os }} / Python ${{ matrix.python-version }})
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.11', '3.12', '3.13']
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
@@ -33,32 +38,50 @@ jobs:
           python -m pip install --upgrade pip
           pip install ".[dev]"
 
-      - name: Lint
-        run: |
-          ruff check src tests
-          black --check src tests
-          mypy src
+      - name: Run pre-commit hooks
+        run: pre-commit run --all-files
 
-      - name: Unit tests with coverage
-        run: |
-          pytest --cov=src --cov-report=xml
+      - name: Lint with Ruff
+        run: ruff check src tests
+
+      - name: Check imports with isort
+        run: isort --check-only src tests
+
+      - name: Check formatting with Black
+        run: black --check src tests
+
+      - name: Type checking with mypy
+        run: mypy src
+
+      - name: Run tests with coverage
+        run: pytest --cov=src --cov-report=xml
 
       - name: Build PQ wheels
         run: python tools/build_pq_wheels.py
-      - uses: actions/upload-artifact@v4
+
+      - name: Upload PQ wheels
+        uses: actions/upload-artifact@v4
         with:
           name: pq-wheels
-          path: dist/*_pq*.whl
+          path: dist/*.whl
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.xml
+          fail_ci_if_error: false
+          comment: true
+          comment_mode: github-pr
 
   trivy-scan:
     name: Trivy SCA / CVE scan
     runs-on: ubuntu-latest
     needs: build-test
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Trivy scan (vuln only)
         uses: aquasecurity/trivy-action@0.20.0
