--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,134 +1,51 @@
-name: Quality / CI pipeline
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
+name: Quality / CI pipeline
 
 on:
-  push:
-    branches: [ main, ci-check-ready ]
-  pull_request:
-    branches: [ main, ci-check-ready ]
+  push:        { branches: [main, ci-check-ready] }
+  pull_request: { branches: [main, ci-check-ready] }
 
-# -------------------------------------------------------------------
 jobs:
-# ──────────────────────────── Lint + type + tests ───────────────────
+# ──────────────────────────── Lint + type + tests ───────────────────
   quality:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set‑up Python
+      - name: Set-up Python
         uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
+        with:
+          python-version: "3.13"
+          cache: pip
 
-      - name: Install dev‑deps
-        run: pip install -e .[dev]
+      - name: Install dev-deps (+ pytest)
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
-      - name: Pre‑commit
+      - name: Pre-commit
         run: pre-commit run --all-files
 
-      - name: Ruff
-        run: ruff check .
+      - name: Static analysis
+        run: |
+          ruff check .
+          black --check .
+          isort  --check-only .
+          bandit -r src -ll
+          semgrep ci
+          mypy --config-file mypy.ini src
 
-      - name: Black
-        run: black --check .
-
-      - name: isort
-        run: isort --check-only .
-
-      - name: Bandit
-        run: bandit -r src -ll
-
-      - name: Semgrep (SAST)
-        run: semgrep ci
-
-      - name: Mypy
-        run: mypy --config-file mypy.ini src
-
-      - name: Pytest
-        run: ZILANT_ALLOW_ROOT=1 pytest -q
-
-# ──────────────────────────── Perf subset ───────────────────────────
+      - name: Unit-tests (with coverage)
+        run: |
+          ZILANT_ALLOW_ROOT=1 pytest -q --cov=src --cov-report=xml
+# ──────────────────────────── Perf subset ───────────────────────────
   perf:
     needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
-      - run: pip install -e .[dev]
+        with: { python-version: "3.13", cache: pip }
+      - run: pip install -e ".[dev]"
       - run: SKIP_FUZZ=1 ZILANT_ALLOW_ROOT=1 pytest -q -m perf --disable-warnings --maxfail=1
-
-  large-file-test:
-    needs: quality
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
-      - run: pip install -e .[dev]
-      - run: pytest -q tests/test_stream_large.py tests/test_stream_resume.py
-
-  cli-polish:
-    needs: quality
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
-      - run: pip install -e .[dev]
-      - run: pytest -q tests/test_cli_observability.py
-
-# ──────────────────────────── Build + artefacts ─────────────────────
-  build-pq:
-    needs: [ quality, perf ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.13" }
-
-      - name: Install build deps
-        run: pip install -e .[dev] build pyyaml
-      - name: Build PQ wheels
-        run: |
-          python -m pip install --upgrade build
-          python -m build --wheel --outdir dist .
-
-      # ---------- wheels ----------
-      - name: Build wheels
-        run: python tools/build_pq_wheels.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: wheels
-          path: |
-            dist/*.whl
-            dist/**/*.whl
-
-      # ---------- Whitepaper ----------
-      - name: Install Pandoc + XeLaTeX (русский шрифт)
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y pandoc texlive-xetex texlive-lang-cyrillic fonts-dejavu-core fonts-dejavu-extra
-
-      - name: Generate whitepaper
-        run: python tools/gen_whitepaper.py
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: whitepaper
-          path: dist/whitepaper.pdf
-
-      # ---------- ISO 27001 SoA (опционно) ----------
-      - name: Generate ISO 27001 SoA (if controls present)
-        run: |
-          if [ -f docs/iso_controls.yml ]; then
-            python tools/iso_soa_generator.py
-          else
-            echo "No docs/iso_controls.yml — skipping SoA generation"
-          fi
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ hashFiles('docs/SoA_ISO27001.md') != '' }}
-        with:
-          name: iso-soa
-          path: docs/SoA_ISO27001.md
