--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
+# ───────────────────────── build-system ─────────────────────────
 [build-system]
 requires = ["setuptools>=68", "wheel", "cffi"]
 build-backend = "setuptools.build_meta"
 
+# ────────────────────────── project  ────────────────────────────
 [project]
 name            = "zilant-prime-core"
 version         = "0.1.0"
@@ -23,6 +25,7 @@ classifiers     = [
   "Typing :: Typed",
 ]
 
+# --- runtime deps ----------------------------------------------------------
 dependencies = [
   "cryptography>=38.0.4,<43.0",
   "argon2-cffi>=23.1,<24.0",
@@ -41,17 +44,20 @@ dependencies = [
   "requests>=2.32,<3.0",
 ]
 
+# --- CLI entry-point --------------------------------------------------------
 [project.scripts]
 zilant = "zilant_prime_core.cli:cli"
 
+# --- links ------------------------------------------------------------------
 [project.urls]
 Homepage      = "https://github.com/QuantumKeyUYU/zilant-prime-core"
 Documentation = "https://github.com/QuantumKeyUYU/zilant-prime-core#readme"
 Issues        = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"
 
+# ──────────────── optional-dependencies (extras) ────────────────────────────
 [project.optional-dependencies]
 
-# --- testing ---
+# testing
 test = [
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
@@ -60,73 +66,85 @@ test = [
   "filelock>=3.13,<4.0",
 ]
 
-# --- development / CI ---
-#  ❗  semgrep — нет поддержки Windows;
-#  ❗  atheris — подходит только Linux + Python < 3.12.
+# development / CI  (включает ВСЁ из test)
 dev = [
+  # lint / style / types
   "black>=24.4,<25.0",
   "isort>=5.13,<6.0",
   "ruff>=0.4,<0.5",
   "mypy>=1.10,<2.0",
-  "pre-commit>=2.21,<3.0",
-  "types-hvac>=2.3.0.0",
+  "pre-commit>=3.7,<4.0",
+  # security / SCA
   "bandit>=1.7,<2.0",
   "semgrep>=1.68,<2.0 ; platform_system != 'Windows'",
   "cyclonedx-bom>=6.0,<7.0",
-  "build>=1.2",
+  # build / release
+  "build>=1.2,<2.0",
   "twine>=5.0,<6.0",
+  # fuzzing / freezing
   "atheris>=2.1 ; platform_system == 'Linux' and python_version < '3.12'",
   "pyinstaller>=6.0,<7.0",
+  # stub types
   "types-PyYAML>=6.0",
+  "types-hvac>=2.3.0.0",
+  # bring all test-deps transitively
+  "pytest>=8.0,<9.0",
+  "pytest-cov>=5.0,<6.0",
+  "pytest-timeout>=2.3,<3.0",
+  "hypothesis>=6.100,<7.0",
+  "filelock>=3.13,<4.0",
 ]
 
-# --- post-quantum crypto toolchains ---
+# post-quantum crypto toolchains
 pq = [
-  "pqclean[kyber768]",
-  "pqclean[dilithium2]",
-  "oqs-python",
+  "pqclean[kyber768]>=1.0.0",
+  "pqclean[dilithium2]>=1.0.0",
+  "oqs-python>=1.0.0",
 ]
 
-# --- docs ---
+# docs
 docs = [
   "sphinx>=7.2,<8.0",
   "furo>=2023.9",
   "sphinx-autodoc-typehints>=1.25,<2.0",
-  "m2r2",
-  "sphinxcontrib-mermaid",
+  "m2r2>=0.3.4",
+  "sphinxcontrib-mermaid>=1.0.0",
 ]
 
-# --- metrics / monitoring ---
+# metrics / monitoring
 metrics = [
   "prometheus-client>=0.16.0,<1.0",
   "flask>=2.2,<3.0",
 ]
 
-# --- notifications ---
+# notifications
 notify = [
-  "slack-sdk",
-  "python-telegram-bot",
+  "slack-sdk>=3.0,<4.0",
+  "python-telegram-bot>=20.0,<21.0",
 ]
 
-[tool.setuptools.packages.find]
-where = ["src"]
-namespaces = false
-
+# ───────────────────────── setuptools tweaks ────────────────────────────────
 [tool.setuptools]
+package-dir = { "" = "src" }
 ext-modules = [
   { name = "zilant_prime_core.utils.crypto_core", sources = ["src/zilant_prime_core/utils/crypto_core.c"], language = "c" },
   { name = "zilant_prime_core.utils.hardening",   sources = ["src/zilant_prime_core/utils/hardening.c"],   language = "c" },
 ]
 
+[tool.setuptools.packages.find]
+where      = ["src"]
+namespaces = false
+
+# ───────────────────── developer tooling presets ───────────────────────────
 [tool.black]
 line-length    = 120
 target-version = ["py310", "py311"]
 
 [tool.isort]
-profile                 = "black"
-line_length             = 120
-known_first_party       = ["zilant_prime_core"]
-known_standard_library  = ["tomllib"]
+profile                = "black"
+line_length            = 120
+known_first_party      = ["zilant_prime_core"]
+known_standard_library = ["tomllib"]
 
 [tool.ruff]
 line-length = 120
@@ -135,21 +153,18 @@ line-length = 120
 select = ["E", "F", "W", "C90", "B"]
 ignore = ["E402", "B904", "C901"]
 
-[tool.lint]
-line-length = 120
-
-[tool.lint.mccabe]
-max-complexity = 12
-
 [tool.mypy]
-python_version           = "3.13"
+python_version           = 3.10
 strict                   = true
 allow_untyped_decorators = true
 warn_return_any          = false
 ignore_missing_imports   = true
 disable_error_code       = ["attr-defined"]
-exclude                  = '(^(src/zil\.py)|^scripts/)'
 
+[tool.lint.mccabe]
+max-complexity = 12
+
+# ────────────────────────── Zilant extras ──────────────────────────────────
 [tool.zilant]
 pq_mode      = "classic"
 backend_type = "local"
