--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
   "tqdm>=4.66.0",
   "psutil>=5.9.0",
   "requests>=2.32,<3.0",
+  "tomli>=2.0,<3.0",
 ]
 
 # --- CLI entry-point --------------------------------------------------------
@@ -64,6 +65,7 @@ test = [
   "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
   "filelock>=3.13,<4.0",
+  "tomli>=2.0,<3.0",
 ]
 
 # development / CI
@@ -98,6 +100,7 @@ dev = [
   # stub types
   "types-PyYAML>=6.0",
   "types-hvac>=2.3.0.0",
+  "tomli>=2.0,<3.0",
 ]
 
 # post-quantum crypto toolchains
