--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,7 +7,7 @@ SPHINXOPTS    ?=
 SOURCEDIR     ?= .
 BUILDDIR      ?= _build
 
-MERMAID       ?= npx -y @mermaid-js/mermaid-cli --no-sandbox
+MERMAID       ?= npx -y @mermaid-js/mermaid-cli
 DIAGRAM_SRC    = architecture/key_lifecycle.mmd
 DIAGRAM_OUT    = _static/key_lifecycle.svg
 
@@ -20,7 +20,7 @@ help:
 
 # ----------------------- mermaid diagrams --------------------------
 $(DIAGRAM_OUT): $(DIAGRAM_SRC)
-	$(MERMAID) -i $< -o $@
+        PUPPETEER_DISABLE_SANDBOX=true $(MERMAID) -i $< -o $@
 
 mermaid: $(DIAGRAM_OUT)
 
