--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -16,6 +16,13 @@ jobs:
         with:
           python-version: '3.13'
       - run: pip install -e .[dev]
+
+      - name: Cache pre-commit environment
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: ${{ runner.os }}-precommit-
       - name: Prometheus scrape test
         run: |
           python - <<'PY'
