--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -2,6 +2,10 @@
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 name: Quality / CI pipeline
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 on:
   push:        { branches: [main, ci-check-ready] }
   pull_request: { branches: [main, ci-check-ready] }
@@ -10,7 +14,7 @@ jobs:
 # ──────────────────────────── Lint + type + tests ───────────────────
   quality:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
 
@@ -25,12 +29,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
 
-      - name: Cache pre-commit environment
-        uses: actions/cache@v4
+      - name: Cache pip & pre-commit
+        uses: actions/cache@v3
         with:
-          path: ~/.cache/pre-commit
-          key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: ${{ runner.os }}-precommit-
+          path: |
+            ~/.cache/pip
+            ~/.cache/pre-commit
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('.pre-commit-config.yaml') }}
 
       - name: Pre-commit
         run: pre-commit run --all-files
@@ -51,7 +56,7 @@ jobs:
   perf:
     needs: quality
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
