--- a/.github/workflows/zilant-ci.yml
+++ b/.github/workflows/zilant-ci.yml
@@ -1,5 +1,9 @@
 name: zilant-ci
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [ main, ci-check-ready ]
@@ -10,7 +14,7 @@ jobs:
   quality:
     name: quality
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -18,12 +22,13 @@ jobs:
           python-version: '3.13'
       - run: pip install -e .[dev]
 
-      - name: Cache pre-commit environment
-        uses: actions/cache@v4
+      - name: Cache pip & pre-commit
+        uses: actions/cache@v3
         with:
-          path: ~/.cache/pre-commit
-          key: ${{ runner.os }}-precommit-${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: ${{ runner.os }}-precommit-
+          path: |
+            ~/.cache/pip
+            ~/.cache/pre-commit
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('.pre-commit-config.yaml') }}
       - name: Prometheus scrape test
         run: |
           python - <<'PY'
@@ -45,7 +50,7 @@ jobs:
   perf:
     name: perf
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 30
     needs: quality
     steps:
       - uses: actions/checkout@v4
@@ -59,7 +64,7 @@ jobs:
     name: build-pq
     runs-on: ubuntu-latest
     needs: [ quality, perf ]
-    timeout-minutes: 15
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -73,7 +78,7 @@ jobs:
       - name: Upload PQ wheels
         uses: actions/upload-artifact@v4
         with:
-          name: pq-wheels-${{ github.job }}
+          name: pq-wheel-${{ github.run_number }}
           path: dist/*.whl
 
       - name: Install Pandoc & XeLaTeX
