--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -58,3 +58,20 @@ jobs:
         with:
           name: choco-package
           path: packaging/chocolatey/*.nupkg
+
+  build-windows-wheel:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+      - name: Build Windows wheel
+        run: |
+          python -m pip install --upgrade build
+          python -m build --wheel --outdir dist
+      - name: Upload Windows wheel
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-wheel
+          path: dist/*.whl
