--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "pynacl>=1.5,<2.0",
   "boto3>=1.28,<2.0",
   "PyQt5>=5.15,<6.0",
+  "oqs",
   "PyYAML>=6.0,<7.0",
   "zstandard>=0.23.0",
   "tqdm>=4.66.0",
