--- a/.github/workflows/vault-rotate-app-token.yml
+++ b/.github/workflows/vault-rotate-app-token.yml
@@ -94,6 +94,7 @@ jobs:
         run: |
           echo "ℹ️ Если требуется, здесь можно"
           echo "::add-mask::${{ secrets.VAULT_TOKEN }}"
+          echo "::add-mask::${{ secrets.VAULT_ADDR }}"
           echo "  curl --header \"X-Vault-Token: [REDACTED]\" \\"
-          echo "       --request POST ${{ secrets.VAULT_ADDR }}/v1/auth/token/revoke-self"
+          echo "       --request POST [REDACTED]/v1/auth/token/revoke-self"
           # Закомментировано, т.к. ревокировать старый токен можно вручную или отдельным шагом.
