--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -19,6 +19,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: zricethezav/gitleaks-action@v2.3.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run gitleaks scan
+        uses: zricethezav/gitleaks-action@v2.3.2
+        with:
+          config_path: .gitleaks.toml
+          report_format: sarif
+          report_path: results.sarif
+          artifact_name: gitleaks-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
