--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -8,29 +8,25 @@ on:
   pull_request:
     branches: ["main"]
 
-permissions:
-  contents: read
-  security-events: write
-
 jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        with: { fetch-depth: 0 }
       - name: Install gitleaks
         run: |
           GITLEAKS_VER=8.12.0
-          curl -sSL "https://github.com/zricethezav/gitleaks/releases/download/v${GITLEAKS_VER}/gitleaks_${GITLEAKS_VER}_linux_x64.tar.gz" \
-            | tar xz -C /usr/local/bin gitleaks
-          chmod +x /usr/local/bin/gitleaks
+          curl -sSL https://github.com/zricethezav/gitleaks/releases/download/v${GITLEAKS_VER}/gitleaks_${GITLEAKS_VER}_linux_x64.tar.gz \
+            | tar xz gitleaks && sudo mv gitleaks /usr/local/bin
       - name: Run gitleaks scan
-        run: >-
-          gitleaks detect --source . --redact --exit-code=1 \
-            --report-format sarif --report-path gitleaks.sarif
-      - name: Upload gitleaks report
-        uses: actions/upload-artifact@v4
+        run: |
+          gitleaks detect --source . \
+                          --redact \
+                          --exit-code 1 \
+                          --report-format sarif \
+                          --report-path gitleaks.sarif
+      - uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: gitleaks.sarif
