--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,13 +41,19 @@ repos:
         name: Check for large files
 
   # Gitleaks – обнаружение секретов
+  - repo: https://github.com/zricethezav/pre-commit-gitleaks
+    rev: v2.3.2
+    hooks:
+      - id: gitleaks
+
   - repo: local
     hooks:
       - id: gitleaks
         name: gitleaks (secrets scan)
-        entry: gitleaks detect --redact --source .
+        entry: gitleaks detect --source .
         language: system
         pass_filenames: false
+        always_run: true
 
   # Mypy – статическая проверка типов (только для кода внутри пакета, не затрагиваем скрипты)
   - repo: https://github.com/pre-commit/mirrors-mypy
