--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,17 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
       - name: Install pre-commit hooks
         run: pre-commit install-hooks
-      - name: Run linters & tests
+      - name: Run linters
         run: pre-commit run --all-files
+
+      - name: Run tests
+        run: pytest --maxfail=1 --exitfirst -q --cov=src --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.xml
+          fail_ci_if_error: false
+          comment: true
+          comment_mode: github-pr
