--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,18 @@ jobs:
           fail_ci_if_error: false
           comment: true
           comment_mode: github-pr
+
+  trivy-scan:
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    name: Trivy SCA / CVE scan
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Trivy scan (vuln only)
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          scan-type: fs
+          scanners: vuln
+          ignore-unfixed: true
+          exit-code: '1'
