--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  ci:
+    name: CI (${{ matrix.os }} / Python ${{ matrix.python-version }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -16,29 +17,20 @@ jobs:
         python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dev dependencies
-        run: pip install -e .[dev]
-      - name: Cache pip & pre-commit
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
-      - name: Install pre-commit hooks
-        run: pre-commit install-hooks
+          cache: pip
+      - name: Install dev deps
+        run: pip install -e ".[dev]"
       - name: Run linters
         run: pre-commit run --all-files
-
-      - name: Run tests
+      - name: Run tests with coverage
         run: pytest --maxfail=1 --exitfirst -q --cov=src --cov-report=xml
-
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.xml
           fail_ci_if_error: false
           comment: true
@@ -48,7 +40,7 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     name: Trivy SCA / CVE scan
     runs-on: ubuntu-latest
-    needs: build
+    needs: ci
     steps:
       - uses: actions/checkout@v4
       - name: Trivy scan (vuln only)
